# universe

./: Cargo.toml  LICENSE  README.md
benches/: memory_comparison.rs  performance_baseline.rs  performance_optimized.rs
examples/: basic_usage.rs
specs/: README.md  UNIV-Canonical-Encoding.zh-CN.md  UNIV-Container-Spec.zh-CN.md  UNIV-Profile-Registry.zh-CN.md  UNIV-Resolution-and-Trust.zh-CN.md  UNIV-Type-Profile-Spec.zh-CN.md  UNIV-UTI-IR.zh-CN.md  UNIV-UTL-IDL.zh-CN.md
specs/Draft/v1.0.0/: UNIV-Profile-Registry.zh-CN.md
specs/Draft/v1.0.0/examples/: UNIV-Example-Set.zh-CN.md
src/: canonical.rs  chunk.rs  constants.rs  error.rs  header.rs  lib.rs  lib.rs.backup  profile.rs  reference.rs  security.rs  toc.rs  transform.rs  util.rs
src/util/: hash.rs  validation.rs  varint.rs
